# rag-dataset-cretator

./: .gitignore  Makefile  README.md  app_flow.md  deneme_md.md  docker-compose.yml  env.template  flow.md
backend/: Dockerfile  pyproject.toml  requirements.txt  test_llm_providers.py  test_prompts_config.py
backend/app/: __init__.py  main.py
backend/app/api/: articles.py  config.py  dataset.py  files.py  health.py  ingest.py  validation.py
backend/app/config/: README.md  prompts.tr.yaml  prompts.yaml
backend/app/core/: config.py  errors.py  logging.py
backend/app/ingest/: __init__.py  clean.py  fetch.py  pipeline.py  split.py  sse.py
backend/app/llm/: __init__.py  factory.py  gemini_chat.py  ollama_chat.py  openai_chat.py  prompts.py  questions.py
backend/app/schemas/: __init__.py  articles.py  health.py  ingest.py
backend/app/storage/: __init__.py  atomic.py  index.py  md.py  paths.py
backend/app/utils/: filtering.py  ids.py  text.py  validation.py
documentation/: LOGGING_IMPROVEMENTS.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useIngestStream.ts
frontend/src/lib/: api.ts
frontend/src/pages/: ArticlePage.tsx  DatasetPage.tsx  HomePage.tsx
frontend/src/types/: api.ts
